Make sure text doesn't wrap

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -33,7 +33,7 @@ body {
     padding: 14px 0 0;
     @media (min-width: 768px) {
       margin: 0 auto;
-      width: 200px;
+      width: 220px;
     }
     li {
       padding-bottom: 6px;
